# mujocoLQR

./: CMakeLists.txt  README.md  analisis.m  doubleLink.xml  humanoid.xml  leg.xml  pendulum.xml  singleLink.xml
controller/: CMakeLists.txt
controller/includes/: controller.h
controller/source/: controller.cc
differenciator/: CMakeLists.txt  mjderivative.cpp
differenciator/includes/: mjderivative.h
simulate/: CMakeLists.txt  main.cc  simulate.h
